// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: hide why is it an issue 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
  </div>
</Fragment>
`;

exports[`should render correctly: is deprecated rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <DocumentationTooltip
      className="spacer-left"
      content="rules.status.DEPRECATED.help"
      links={
        Array [
          Object {
            "href": "/documentation/user-guide/rules/",
            "label": "see_x.rules",
          },
        ]
      }
    >
      <span
        className="spacer-right badge badge-error"
      >
        issue.resolution.DEPRECATED.rule_deprecated
      </span>
    </DocumentationTooltip>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: is manual vulnerability 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <Tooltip
      overlay="issue.manual_vulnerability.description"
    >
      <div
        className="badge spacer-right text-baseline"
      >
        issue.manual_vulnerability
      </div>
    </Tooltip>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: is removed rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <DocumentationTooltip
      className="spacer-left"
      content="rules.status.REMOVED.help"
      links={
        Array [
          Object {
            "href": "/documentation/user-guide/rules/",
            "label": "see_x.rules",
          },
        ]
      }
    >
      <span
        className="spacer-right badge badge-error"
      >
        issue.resolution.REMOVED.rule_removed
      </span>
    </DocumentationTooltip>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: with engine info 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <Tooltip
      overlay="issue.from_external_rule_engine.js"
    >
      <div
        className="badge spacer-right text-baseline"
      >
        js
      </div>
    </Tooltip>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: with quick fix 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      Reduce the number of conditional operators (4) used in the expression
    </span>
    <Tooltip
      mouseLeaveDelay={0.5}
      overlay={
        <FormattedMessage
          defaultMessage="issue.quick_fix_available_with_sonarlint"
          id="issue.quick_fix_available_with_sonarlint"
          values={
            Object {
              "link": <a
                href="https://www.sonarqube.org/sonarlint/?referrer=sonarqube-quick-fix"
                rel="noopener noreferrer"
                target="_blank"
              >
                SonarLint
              </a>,
            }
          }
        />
      }
    >
      <SonarLintIcon
        className="it__issues-sonarlint-quick-fix spacer-right"
        size={15}
      />
    </Tooltip>
  </div>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</Fragment>
`;
